@@ -33,8 +33,7 @@ class Repository < ActiveRecord::Base
 
   def member?(user, path = nil)
     return true if public? || (user.is_a?(User) && user.admin?)
-    paths = path.to_s.split('/').inject([]) { |m, p| m << (m.last.nil? ? p : "#{m.last}/#{p}") }
-    paths = [''] if paths.empty?
+    paths = path.to_s.split('/').inject([]) { |m, p| m << (m.last.nil? ? p : "#{m.last}/#{p}") }.unshift('')
     !permissions.count(:id, :conditions => ["(user_id is null or user_id = ?) and path in (?)", user ? user.id : 0, paths]).zero?
   end
   
